shiori-kubernetes/spec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-05-10T20:02:50Z"
  generation: 1
  labels:
    k8s-app: shiori
  name: shiori
  namespace: bookmark
  resourceVersion: "14338"
  selfLink: /apis/apps/v1/namespaces/bookmark/deployments/shiori
  uid: e8cd8403-b8fe-4209-ac4e-7b50f629ccb2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: shiori
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: shiori
      name: shiori
    spec:
      containers:
      - image: radhifadlillah/shiori
        imagePullPolicy: Always
        name: shiori
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-05-10T20:02:52Z"
    lastUpdateTime: "2022-05-10T20:02:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-05-10T20:02:50Z"
    lastUpdateTime: "2022-05-10T20:02:52Z"
    message: ReplicaSet "shiori-759dcbf855" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
