shiori-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-05-10T20:02:50Z"
  labels:
    k8s-app: shiori
  name: shiori
  namespace: bookmark
  resourceVersion: "14308"
  selfLink: /api/v1/namespaces/bookmark/services/shiori
  uid: af77b085-dd52-4e16-b068-e8ff2fd5893c
spec:
  clusterIP: 10.152.183.49
  clusterIPs:
  - 10.152.183.49
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-8080-8080-4jnsc
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: shiori
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
